--- a/app.json
+++ b/app.json
@@ -1,26 +1,28 @@
 {
-  "name": "Telegram Torrent Leecher",
-  "description": "A Telegram Torrent (and youtube-dl) Leecher based on Pyrogram.",
+  "name": "TG Rename Bot",
+  "description": "Telegram's best Open Source Rename Bot. Create your Fork now.",
   "keywords": [
     "telegram",
     "best",
-    "indian",
-    "pyrogram",
-    "torrent",
-    "3",
-    "plugin",
-    "modular",
-    "productivity",
-    "youtube-dl",
-    "leecher"
+    "open",
+    "source",
+    "Rename"
   ],
-  "repository": "https://github.com/prgofficial/TorrentLeech-GDriVe",
-  "success_url": "https://github.com/gautamajay52/TorrentLeech-Gdrive",
-  "website": "https://github.com/prgofficial/TorrentLeech-GDriVe",
+  "success_url": "https://telegram.dog/AnyDLBot",
+  "website": "https://github.com/SpEcHiDe/AnyDLBot",
+  "repository": "https://github.com/erichdanikeninfo/TG-Rename-Bot",
   "env": {
-    "ENV": {
+    "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
       "value": "ANYTHING"
+    },
+    "TG_BOT_TOKEN": {
+      "description": "Your bot token, as a string.",
+      "value": ""
+    },
+    "CHAT_BASE_TOKEN": {
+      "description": "Your chat base token, as a string.",
+      "value": ""
     },
     "APP_ID": {
       "description": "Get this value from https://my.telegram.org",
@@ -30,7 +32,38 @@
       "description": "Get this value from https://my.telegram.org",
       "value": ""
     },
-    "TG_BOT_TOKEN": {
-      "description": "get this value from @BotFather",
-      "value": ""
+    "AUTH_USERS": {
+      "description": "allow only pre-defined users to use this bot",
+      "value": "7351948 466337795"
     },
+    "BANNED_USERS": {
+      "description": "Banned Unwanted members..",
+      "value": "",
+      "required": false
+    },
+    "CHUNK_SIZE": {
+      "description": "chunk size that should be used with requests",
+      "value": "128",
+      "required": false
+    }
+  },
+  "addons": [
+    {
+    "plan": "heroku-postgresql",
+      "options": {
+        "version": "12"
+      }
+    }
+  ],
+  "buildpacks": [{
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+  }, {
+    "url": "heroku/python"
+  }],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "free"
+    }
+  }
+}
